# name: TestDeclare.test_asdict[Defaults]
  dict({
    'memory_size': 1,
    'memory_type': 'BIT',
    'name': 'ro',
    'offsets': list([
    ]),
    'shared_region': None,
  })
# ---
# name: TestDeclare.test_asdict[With-Offsets]
  dict({
    'memory_size': 5,
    'memory_type': 'BIT',
    'name': 'ro',
    'offsets': list([
      tuple(
        2,
        'OCTET',
      ),
    ]),
    'shared_region': 'theta',
  })
# ---
# name: TestDeclare.test_asdict[With-Shared]
  dict({
    'memory_size': 5,
    'memory_type': 'INTEGER',
    'name': 'ro',
    'offsets': list([
    ]),
    'shared_region': 'theta',
  })
# ---
# name: TestDeclare.test_asdict[With-Size]
  dict({
    'memory_size': 5,
    'memory_type': 'OCTET',
    'name': 'ro',
    'offsets': list([
    ]),
    'shared_region': None,
  })
# ---
# name: TestDeclare.test_out[Defaults]
  'DECLARE ro BIT[1]'
# ---
# name: TestDeclare.test_out[With-Offsets]
  'DECLARE ro BIT[5] SHARING theta OFFSET 2 OCTET'
# ---
# name: TestDeclare.test_out[With-Shared]
  'DECLARE ro INTEGER[5] SHARING theta'
# ---
# name: TestDeclare.test_out[With-Size]
  'DECLARE ro OCTET[5]'
# ---
# name: TestDeclare.test_str[Defaults]
  'DECLARE ro BIT[1]'
# ---
# name: TestDeclare.test_str[With-Offsets]
  'DECLARE ro BIT[5] SHARING theta OFFSET 2 OCTET'
# ---
# name: TestDeclare.test_str[With-Shared]
  'DECLARE ro INTEGER[5] SHARING theta'
# ---
# name: TestDeclare.test_str[With-Size]
  'DECLARE ro OCTET[5]'
# ---
# name: TestDefCalibration.test_out[No-Params]
  '''
  DEFCAL Calibrate 0:
  	X 0
  '''
# ---
# name: TestDefCalibration.test_out[Params]
  '''
  DEFCAL Calibrate(%X) 0:
  	X 0
  '''
# ---
# name: TestDefCalibration.test_str[No-Params]
  '''
  DEFCAL Calibrate 0:
  	X 0
  '''
# ---
# name: TestDefCalibration.test_str[Params]
  '''
  DEFCAL Calibrate(%X) 0:
  	X 0
  '''
# ---
# name: TestDefFrame.test_out[Frame-Only]
  'DEFFRAME 0 "frame":'
# ---
# name: TestDefFrame.test_out[Frame-Only].1
  set({
  })
# ---
# name: TestDefFrame.test_out[With-Optionals]
  'DEFFRAME 1 "frame":'
# ---
# name: TestDefFrame.test_out[With-Optionals].1
  set({
    '\tCENTER-FREQUENCY: 440',
    '\tDIRECTION: "direction"',
    '\tHARDWARE-OBJECT: "hardware_object"',
    '\tINITIAL-FREQUENCY: 1.39',
    '\tSAMPLE-RATE: 44.1',
  })
# ---
# name: TestDefFrame.test_str[Frame-Only]
  'DEFFRAME 0 "frame":'
# ---
# name: TestDefFrame.test_str[Frame-Only].1
  set({
  })
# ---
# name: TestDefFrame.test_str[With-Optionals]
  'DEFFRAME 1 "frame":'
# ---
# name: TestDefFrame.test_str[With-Optionals].1
  set({
    '\tCENTER-FREQUENCY: 440',
    '\tDIRECTION: "direction"',
    '\tHARDWARE-OBJECT: "hardware_object"',
    '\tINITIAL-FREQUENCY: 1.39',
    '\tSAMPLE-RATE: 44.1',
  })
# ---
# name: TestDefMeasureCalibration.test_out[qubit0-memory_reference0-instrs0]
  '''
  DEFCAL MEASURE 0 theta:
  	X 0
  
  '''
# ---
# name: TestDelayFrames.test_out[frames0-5.0]
  'DELAY 0 "frame" 5'
# ---
# name: TestDelayQubits.test_out[FormalArgument]
  'DELAY a 2.5'
# ---
# name: TestDelayQubits.test_out[Qubit]
  'DELAY 0 5'
# ---
# name: TestFence.test_out[FormalArgument]
  'FENCE a'
# ---
# name: TestFence.test_out[Qubit]
  'FENCE 0'
# ---
# name: TestGate.test_controlled_modifier[CPHASE-Expression]
  'CONTROLLED CPHASE(1.5707963267948966) 5 0 1'
# ---
# name: TestGate.test_controlled_modifier[RZ-MemoryReference-Expression]
  'CONTROLLED RZ((alpha[0]-beta[0])) 5 0'
# ---
# name: TestGate.test_controlled_modifier[RZ-MemoryReference]
  'CONTROLLED RZ(theta[0]) 5 0'
# ---
# name: TestGate.test_controlled_modifier[X-Gate]
  'CONTROLLED X 5 0'
# ---
# name: TestGate.test_dagger_modifier[CPHASE-Expression]
  'DAGGER CPHASE(1.5707963267948966) 0 1'
# ---
# name: TestGate.test_dagger_modifier[RZ-MemoryReference-Expression]
  'DAGGER RZ((alpha[0]-beta[0])) 0'
# ---
# name: TestGate.test_dagger_modifier[RZ-MemoryReference]
  'DAGGER RZ(theta[0]) 0'
# ---
# name: TestGate.test_dagger_modifier[X-Gate]
  'DAGGER X 0'
# ---
# name: TestGate.test_forked_modifier[CPHASE-Expression]
  'FORKED CPHASE(1.57079632679489660) 5 0 1'
# ---
# name: TestGate.test_forked_modifier[RZ-MemoryReference-Expression]
  'FORKED RZ((alpha[0]-beta[0])0) 5 0'
# ---
# name: TestGate.test_forked_modifier[RZ-MemoryReference]
  'FORKED RZ(theta[0]0) 5 0'
# ---
# name: TestGate.test_forked_modifier[X-Gate]
  'FORKED X 5 0'
# ---
# name: TestGate.test_repr[CPHASE-Expression]
  'Gate { name: "CPHASE", parameters: [Number(Complex { re: 1.5707963267948966, im: 0.0 })], qubits: [Fixed(0), Fixed(1)], modifiers: [] }'
# ---
# name: TestGate.test_repr[RZ-MemoryReference-Expression]
  'Gate { name: "RZ", parameters: [Infix(InfixExpression { left: Address(MemoryReference { name: "alpha", index: 0 }), operator: Minus, right: Address(MemoryReference { name: "beta", index: 0 }) })], qubits: [Fixed(0)], modifiers: [] }'
# ---
# name: TestGate.test_repr[RZ-MemoryReference]
  'Gate { name: "RZ", parameters: [Address(MemoryReference { name: "theta", index: 0 })], qubits: [Fixed(0)], modifiers: [] }'
# ---
# name: TestGate.test_repr[X-Gate]
  'Gate { name: "X", parameters: [], qubits: [Fixed(0)], modifiers: [] }'
# ---
# name: TestGate.test_str[CPHASE-Expression]
  'CPHASE(1.5707963267948966) 0 1'
# ---
# name: TestGate.test_str[RZ-MemoryReference-Expression]
  'RZ((alpha[0]-beta[0])) 0'
# ---
# name: TestGate.test_str[RZ-MemoryReference]
  'RZ(theta[0]) 0'
# ---
# name: TestGate.test_str[X-Gate]
  'X 0'
# ---
# name: TestMeasurement.test_out[MemoryReference]
  'MEASURE 1 theta[0]'
# ---
# name: TestMeasurement.test_out[No-MemoryReference]
  'MEASURE 0'
# ---
# name: TestMeasurement.test_str[MemoryReference]
  'MEASURE 1 theta[0]'
# ---
# name: TestMeasurement.test_str[No-MemoryReference]
  'MEASURE 0'
# ---
# name: TestPragma.test_out[Command-Only]
  'PRAGMA NO-NOISE'
# ---
# name: TestPragma.test_out[With-Arg-And-String]
  'PRAGMA READOUT-POVM 1 "(0.9 0.19999999999999996 0.09999999999999998 0.8)"'
# ---
# name: TestPragma.test_out[With-Arg]
  'PRAGMA DOES-A-THING 0 b'
# ---
# name: TestPragma.test_out[With-String]
  'PRAGMA INITIAL_REWIRING "GREEDY"'
# ---
# name: TestPragma.test_str[Command-Only]
  'PRAGMA NO-NOISE'
# ---
# name: TestPragma.test_str[With-Arg-And-String]
  'PRAGMA READOUT-POVM 1 "(0.9 0.19999999999999996 0.09999999999999998 0.8)"'
# ---
# name: TestPragma.test_str[With-Arg]
  'PRAGMA DOES-A-THING 0 b'
# ---
# name: TestPragma.test_str[With-String]
  'PRAGMA INITIAL_REWIRING "GREEDY"'
# ---
# name: TestReset.test_out[FormalArgument]
  'RESET a'
# ---
# name: TestReset.test_out[None]
  'RESET'
# ---
# name: TestReset.test_out[Qubit]
  'RESET 0'
# ---
# name: TestReset.test_str[FormalArgument]
  'RESET a'
# ---
# name: TestReset.test_str[None]
  'RESET'
# ---
# name: TestReset.test_str[Qubit]
  'RESET 0'
# ---
